# pico_ws

./: CMakeLists.txt
framework/: CMakeLists.txt  sys_main.c  sys_main.h  tgt_main.c  tgt_main.h
framework2/: CMakeLists.txt  apl_blink.c  apl_core1.c  apl_main.c  apl_main.h  apl_pwm.c  apl_request.c  iod_adc.c  iod_flash.c  iod_i2c.c  iod_i2c.h  iod_i2c_6axis.c  iod_i2c_eep.c  iod_i2c_gyro.c  iod_main.c  iod_main.h  iod_mcore.c  iod_port.c  iod_pwm.c  iod_spi.c  iod_spi.h  iod_spi_eep.c  iod_spi_gyro.c  iod_uart.c  iod_wdog.c  sys_main.c  sys_main.h
hello_adc/: CMakeLists.txt  hello_adc.c
hello_gpio_irq/: CMakeLists.txt
hello_multicore/: CMakeLists.txt
hello_pwm/: hello_pwm.c
hello_reset/: CMakeLists.txt
hello_serial/: hello_serial.c
hello_timer/: CMakeLists.txt  hello_timer.c
hello_uart/: CMakeLists.txt  hello_uart.c
hello_watchdog/: CMakeLists.txt
i2c/: CMakeLists.txt
i2c/bus_scan/: CMakeLists.txt  bus_scan.c
lowlevel/: CMakeLists.txt
lowlevel/multicore_runner_queue/: CMakeLists.txt
lowlevel/program/: CMakeLists.txt
lowlevel/timer_lowlevel/: CMakeLists.txt  timer_lowlevel.c
lowlevel/uart_advanced/: CMakeLists.txt  uart_advanced.c
pio/: CMakeLists.txt
pio/hello_pio/: CMakeLists.txt
pio/pwm/: CMakeLists.txt  pwm.c
pio/uart_rx/: CMakeLists.txt  uart_rx.c
pio/uart_tx/: CMakeLists.txt  uart_tx.c
test/: CMakeLists.txt
test/i2c_e2prom/: CMakeLists.txt  i2c_e2prom.c
test/i2c_gyro/: CMakeLists.txt  i2c_gyro.c
test/iod_spi_eep/: CMakeLists.txt  iod_spi_eep.c
test/spi_eeprom/: CMakeLists.txt  spi_eeprom.c
test/test_gpio/: CMakeLists.txt  test_gpio.c
